# primify

./: Cargo.toml  LICENSE  README.md
example/: prime_grumpy.txt
src/: extra_ops.rs  main.rs
src/backends/: bigint.rs  mod.rs  mpz.rs  ramp.rs
src/checkers/: checker.rs  combine.rs  miller_rabin.rs  mod.rs  sieve.rs
