[package]
name = "primify"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]

[dependencies]
num = "0.1.41"
clap = "2.29.4"
rand = "0.4.2"
primal = "0.2.3"
ramp = { version = "0.3.12", optional = true }
rust-gmp = { version = "0.5.0", optional = true }
image = "0.18.0"
rayon = "1.0.0"

[features]
gmp_backend = ["rust-gmp"]
ramp_backend = ["ramp"]
num_backend = []
default = ["gmp_backend"]

[profile.release]
lto = true
opt-level = 3